# Logistics-dApp

pallets/carrier/: Cargo.toml
pallets/carrier/src/: calls.rs  config.rs  errors.rs  events.rs  lib.rs  types.rs
pallets/logistics/: Cargo.toml
pallets/logistics/src/: calls.rs  config.rs  errors.rs  events.rs  lib.rs  types.rs
pallets/package/: Cargo.toml
pallets/package/src/: calls.rs  config.rs  errors.rs  events.rs  lib.rs  storages.rs  types.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
